tests/baselines/reference/tsxElementResolution8.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file.tsx(8,2): error TS2604: JSX element type 'Div' does not have any construct or call signatures.
file.tsx(34,2): error TS2604: JSX element type 'Obj3' does not have any construct or call signatures.


==== file.tsx (3 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    // Error
    var Div = 3;
    <Div />;
     ~~~
!!! error TS2604: JSX element type 'Div' does not have any construct or call signatures.
    
    // OK
    function Fact(): any { return null; }
    <Fact />
    
    // Error
    function Fnum(): number{ return 42; }
    <Fnum />
    
    interface Obj1 {
    	new(): {};
    	(): number;
    }
    var Obj1: Obj1;
    <Obj1 />; // OK, prefer construct signatures
    
    interface Obj2 {
    	(): number;
    }
    var Obj2: Obj2;
    <Obj2 />; // Error
    
    interface Obj3 {
    }
    var Obj3: Obj3;
    <Obj3 />; // Error
     ~~~~
!!! error TS2604: JSX element type 'Obj3' does not have any construct or call signatures.
    